polished notebooks; added stoch tree image

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,4 @@
 - create wrapper nsoSolver(method='upgm', stopping=..., )
 - use cutting planes or yosida to get a stopping criterion for ALL methods
 - replace CP and BDL gurobi dependency with open source alternative?
+- works on python 3? travis..
