--- a/notebooks/ApplicationToDuality.ipynb
+++ b/notebooks/ApplicationToDuality.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vujanicr\\PycharmProjects\\nsopy_base\n"
+      "C:\\Users\\vujanicr\\PycharmProjects\n"
      ]
     }
    ],
@@ -26,11 +26,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 2: solving dual problems\n",
+    "# Approximate solutions to MILPs\n",
     "\n",
-    "The main intended application of these methods is to solve dual problems. Unless the underlying primal problem is convex and has a strictly convex objective (or dualized constraints) the dual problem is non-smooth. This is for example the case for problems entailing discrete (e.g. binary) variables.\n",
+    "One important application of first order methods for non-differentiable objectives is to solve dual problems associated to discrete/mixed-integer optimization programs, i.e., problems entailing binary or integer variables. It in fact turns out that unless the underlying primal problem is convex and has a strictly convex objective (or dualized constraints) its dual problem is non-smooth, and hence requires the application of appropriate solution methods.\n",
     "\n",
-    "* Consider the following optimization program (MILP):\n",
+    "### Step 1\n",
+    "\n",
+    "Consider the following optimization program (MILP):\n",
     "$$\n",
     "\\begin{array}{ll}\n",
     "\\min\\limits_x     & -\\frac{1}{2} x_1 - x_2 + x_3\\\\\n",
@@ -41,10 +43,19 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
+    "One can verify that the (unique) optimizer for this problem is $x^\\star = [0, 1, 1]$. We generally work with problems for which we find it hard to compute an exact optimizer, and wish to explore possibilities of computing approximate solutions instead.\n",
     "\n",
-    "Without the first two constraints, the problem is trivial (linear optimization over a box). The general idea of duality is to take some advantage from this fact; in this framework \"complicating\" constraints are dualized in the objective and we solve the associated dual.\n",
+    "Note that without the first two constraints, the problem is trivial: it reduces to a linear optimization over a unit box, so an optimal value for $x_i$ would be 0 if its corresponding coefficient in the objective is positive, and 1 otherwise. \n",
     "\n",
-    "* We introduce the corresponding dual function $d(\\lambda)$:\n",
+    "### Step 2\n",
+    "\n",
+    "The general idea of duality is to take advantage of this type of situation: when a problem becomes significantly simpler when we can discard some of the constraints, we can take advantage of this fact to produce approximate solutions. What we are doing here is deciding on a set of \"complicating\" constraints to \"dualize in the objective\", and to derive a corresponding dual problem from this procedure, which we can then solve using the first-order methods in this package. \n",
+    "\n",
+    "**Remark**: generally, we want to relax as few constraints as possible, as the quality of the approximation depends on it.\n",
+    "\n",
+    "**Remark**: the discussion in this notebook pertains situations in which we have \"complicating constraints\". The same framework can be applied to situations in which we have \"complicating variables\", as we do for the examples concerning decomposition of some problems arising in computer vision and stochastic optimization.\n",
+    "\n",
+    "With our choice of constraints to be dualized, we get the following corresponding dual function $d(\\lambda)$:\n",
     "\n",
     "$$\n",
     "\\begin{array}{lcll}\n",
@@ -54,7 +65,9 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "Notice how evaluating the dual function is trivial: the *inner* optimization problem simply sets to 0 variables that, for given $\\lambda$, have a positive objective; otherwise 1. The dual function looks like this:\n",
+    "Note that while our primal problem is an optimization model where $x$ is the optimization variable, in the above dual function the variable is $\\lambda$, while $x$ is \"hidden\" in the so-called inner optimization model.\n",
+    "\n",
+    "The important advantage we have recovered from dualizing constraints is that evaluating the dual function $d(\\lambda)$ for a given $\\lambda$ is trivial: the *inner* optimization problem simply sets to 0 variables that, for given $\\lambda$, have a positive objective; otherwise 1 (as noted before). When plotted, the dual function $d(\\lambda)$ looks like this:\n",
     "![dual function](img/ex_2.png)\n",
     "This is the non-smooth function we would like to optimize (maximize) in the dual problem:\n",
     "\n",
@@ -65,9 +78,9 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "where $\\Lambda = \\mathbb{R}_+^2$. Notice that, in contrast to the previous example where the entire function was known analytically a priori, in this case we do not have an explicit analytical expression for $d(\\lambda)$ but we can query its first order oracle.\n",
+    "where $\\Lambda = \\mathbb{R}_+^2$. Notice that, in contrast to the analyitcal example discussed [here](./AnalyticalExample.ipynb), where the entire function was known analytically a priori, in this case we do not have an explicit analytical expression for $d(\\lambda)$ but we can query its first order oracle.\n",
     "\n",
-    "This problem belongs to the battery of test cases, so we can simply import it and pass it to our solvers."
+    "This problem belongs to the battery of test cases for this package, so we can simply import it and pass it to our solvers."
    ]
   },
   {
@@ -79,24 +92,34 @@
    "outputs": [],
    "source": [
     "from nsopy.tests.analytical_oracles import AnalyticalExampleInnerProblem\n",
+    "\n",
+    "inner_problem = AnalyticalExampleInnerProblem()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can choose a solution method and go through the iterations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "from nsopy.quasi_monotone_subgradient_methods import SGMDoubleSimpleAveraging as DSA\n",
     "from nsopy.quasi_monotone_subgradient_methods import SGMTripleAveraging as TA\n",
     "from nsopy.subgradient_methods import SubgradientMethod as SG\n",
     "from nsopy.universal_gradient_methods import UniversalPGM as UPGM\n",
     "from nsopy.universal_gradient_methods import UniversalDGM as UDGM\n",
     "from nsopy.universal_gradient_methods import UniversalFGM as UFGM\n",
-    "from nsopy.method_loggers import GenericDualMethodLogger"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "inner_problem = AnalyticalExampleInnerProblem()\n",
+    "\n",
+    "from nsopy.method_loggers import GenericDualMethodLogger\n",
+    "\n",
     "dual_method = UPGM(inner_problem.oracle, inner_problem.projection_function, epsilon=0.01)\n",
     "method_logger = GenericDualMethodLogger(dual_method)\n",
     "\n",
@@ -108,10 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note 1**: you can try all the different methods. \n",
-    "**Note 2**: we do not need to pass the `dimension` argument if the `projection_function()` method can be called with 0, and returns an initial point of appropriate dimension.\n",
-    "\n",
-    "And plot the resulting method's trajectory:"
+    "... and plot the resulting method's trajectory:"
    ]
   },
   {
@@ -923,83 +943,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note 1**: you can try all the different methods. \n",
+    "\n",
+    "**Note 2**: the instantiation of the methods implemented requires the `dimension` argument to be defined. This can be avoided if the `projection_function(lambda_k)` method can be called with $\\lambda_k=0$, and returns a gradient of appropriate dimension.\n",
+    "\n",
+    "### Step 3\n",
+    "\n",
+    "We can now inspect the $\\lambda_k$ produced by our solution methods at iteration $k$; we are particularly interested in the last iterate:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.00852273  1.00852273]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lambda_k = method_logger.lambda_k_iterates[-1]\n",
+    "print(lambda_k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "which we can use to evaluate $d(\\lambda_k)$. An approximate solution to our initial primal problem is given by the solution of the inner problem at $\\lambda_k$, which we denote by $x(\\lambda_k)$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  1.  1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_k, d_k, diff_d_k = inner_problem.oracle(lambda_k)\n",
+    "print(x_k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wow! We actually recovered the optimizer of the problem, which, as noted above, is indeed $x^\\star = [0,1,1]$. This is a lucky coincidence though. We can namely inspect the inner solutions recovered at earlier steps; these are also stored in the logger:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([ 0.,  0.]),\n",
-       " array([ 0.        ,  0.90909091]),\n",
-       " array([ 0.90909091,  0.90909091]),\n",
-       " array([ 0.90909091,  0.96590909]),\n",
-       " array([ 0.96590909,  0.96590909]),\n",
-       " array([ 0.96590909,  0.99431818]),\n",
-       " array([ 0.99431818,  0.99431818]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273]),\n",
-       " array([ 0.99431818,  1.00852273]),\n",
-       " array([ 1.00852273,  1.00852273])]"
+       "[array([ 0.,  1.,  0.]),\n",
+       " array([ 0.,  1.,  1.]),\n",
+       " array([ 0.,  1.,  0.]),\n",
+       " array([ 0.,  1.,  1.]),\n",
+       " array([ 0.,  1.,  0.]),\n",
+       " array([ 0.,  1.,  1.]),\n",
+       " array([ 0.,  1.,  0.]),\n",
+       " array([ 0.,  1.,  1.]),\n",
+       " array([ 0.,  1.,  0.]),\n",
+       " array([ 0.,  1.,  1.])]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "method_logger.lambda_k_iterates"
+    "method_logger.x_k_iterates[-10:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It looks like $x_1$ and $x_2$ are stuck at $0$ and $1$ respectively, while $x_3$ oscillates between $0$ and $1$. Choosing $x_3 = 1$ leads to the optimizer, while $x_3 = 0$ resolves in an infeasible primal point. \n",
+    "\n",
+    "This is the nature of this type of approximation, which in the literature is called *Lagrangian Relaxation*: while we go through our dual iterates $\\lambda_k$, we inspect the inner solutions recovered; we generally do not have any guarantees on whether these inner solutions are optimal or even feasible, but in practice they often turn out to be very good approximations. There are special problem structures for which we can provide some feasibility and performance guarantees, but this is beyond the scope of this brief introduction.\n",
+    "\n",
+    "These dual methods are the basis of a class of solutions architectures used to solve large, complex integer optimization models. They can be combined with heuristics which can rectify infeasibile solutions into feasible ones. They are also the main machinery behind solution methods like *column generation* and *Benders decomposition*. Dual methods can also be used to produce strong lower bounds for primal optimization problems; it is in fact true that $d$"
    ]
   },
   {
@@ -1013,6 +1058,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
