--- a/notebooks/ApplicationToDuality.ipynb
+++ b/notebooks/ApplicationToDuality.ipynb
@@ -78,7 +78,11 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "where $\\Lambda = \\mathbb{R}_+^2$. Notice that, in contrast to the analyitcal example discussed [here](./AnalyticalExample.ipynb), where the entire function was known analytically a priori, in this case we do not have an explicit analytical expression for $d(\\lambda)$ but we can query its first order oracle.\n",
+    "where $\\Lambda = \\mathbb{R}_+^2$ (so-called positive orthant). \n",
+    "\n",
+    "**Remark:** the structure of $\\Lambda$ depends on the constraints we are dualizing. If the $i$-th constraint dualized is an inequality \"$\\leq$\", the corresponding $i$-th entry in $\\lambda_k$ has to be positive, i.e., $\\lambda_k[i] \\geq 0$; if the constraint is an equality, $\\lambda_k[i]$ is free. There might be regions where the dual function is unbounded from below, which we also typically want to avoid with corresponding constraints which we place $\\Lambda$; this is beyond the scope of this tutorial.\n",
+    "\n",
+    "Notice that, in contrast to the example discussed [here](./AnalyticalExample.ipynb), where the entire function was known analytically a priori, in this case we do not have an explicit analytical expression for $d(\\lambda)$ but we can query its first order oracle, i.e., know the gradient and the function value of $d(\\lambda_k)$ for a given $\\lambda_k \\in \\Lambda$.\n",
     "\n",
     "This problem belongs to the battery of test cases for this package, so we can simply import it and pass it to our solvers."
    ]
