--- a/notebooks/ApplicationToDuality.ipynb
+++ b/notebooks/ApplicationToDuality.ipynb
@@ -1048,7 +1048,7 @@
     "\n",
     "This is the nature of this type of approximation, which in the literature is called *Lagrangian Relaxation*: while we go through our dual iterates $\\lambda_k$, we inspect the inner solutions recovered; we generally do not have any guarantees on whether these inner solutions are optimal or even feasible, but in practice they often turn out to be very good approximations. There are special problem structures for which we can provide some feasibility and performance guarantees, but this is beyond the scope of this brief introduction.\n",
     "\n",
-    "These dual methods are the basis of a class of solutions architectures used to solve large, complex integer optimization models. They can be combined with heuristics which can rectify infeasibile solutions into feasible ones. They are also the main machinery behind solution methods like *column generation* and *Benders decomposition*. Dual methods can also be used to produce strong lower bounds for primal optimization problems; it is in fact true that $d$"
+    "These dual methods are the basis of a class of solutions architectures used to solve large, complex integer optimization models. They can be combined with heuristics which can rectify infeasibile solutions into feasible ones. They are also the main machinery behind solution methods like *column generation* and *Benders decomposition*. Dual methods can also be used to produce strong lower bounds for primal optimization problems: we have in fact that $d(\\lambda_k) \\leq p^\\star$ for all $\\lambda_k \\in \\Lambda$, where $p^\\star$ is the optimizer of the primal problem."
    ]
   },
   {
